--- a/index.html
+++ b/index.html
@@ -4,41 +4,43 @@
     <meta charset="utf-8">
     <title></title>
 
-    <style media="screen">
-    
-.boxone{
-height: 1000px;
-
-}
-
-    </style>
-
   </head>
   <body>
 
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="style.css">
+
+<div class="titolo container col-md-12 ">
+<div class=" container col-md-7 col-md-offset-5">
+
+  <h1>AJAX - CALL</h1>
+
+</div>
+</div>
+
+    	<div class="push container col-md-2">
 
 
-    	<div class="container col-md-4">
+
+        <button type="button" class="btn btn-success">POST</button>
 
 
-    						<button class="btn">post</button>
 
-    			</div>
+      	</div>
 
+        <div class="container col-md-8 boxone appari" id="gabbia">
 
-  <div class="container col-md-4 boxone" id="gabbia">
+    
+        </div>
 
-
-  </div>
 
 
 
 
 
 <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-
-<script src="main.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js'></script>
+<script src="js/main.js"></script>
 
 
   </body>
